--- a/src/containers/dashboard/style.css
+++ b/src/containers/dashboard/style.css
@@ -1,5 +1,10 @@
 .dashboard-wrapper{
-    padding: 20px
+    align-items: center;
+    justify-content: center;
+}
+
+h2{
+    text-align: center;
 }
 
 .date-picker-wrapper{
