Add loading css

--- a/src/containers/dashboard/style.css
+++ b/src/containers/dashboard/style.css
@@ -1,6 +1,8 @@
 .dashboard-wrapper{
     align-items: center;
     justify-content: center;
+    display: flex;
+    flex-direction: column;
 }
 
 h2{
