--- a/src/components/loading/loading.css
+++ b/src/components/loading/loading.css
@@ -2,5 +2,34 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 45%;
+
+}
+
+.lds-dual-ring {
+    height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6px solid;
+    border-color: red transparent red transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+
+
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
