--- a/src/components/charts/components/item/style.css
+++ b/src/components/charts/components/item/style.css
@@ -2,8 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 600px;
+    width: 750px;
     height: 400px;
+    margin-top: 10px;
 }
 
 
