--- a/src/components/charts/components/item/chart-item.css
+++ b/src/components/charts/components/item/chart-item.css
@@ -1,4 +1,4 @@
-.item-wrapper {
+.chart-item {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -9,7 +9,7 @@
 
 
 @media only screen and (max-width: 992px) {
-    .item-wrapper {
+    .chart-item {
         width: 100%;
     }
 
