--- a/src/components/action-buttons/action-buttons.css
+++ b/src/components/action-buttons/action-buttons.css
@@ -1,16 +1,15 @@
 .button {
-    padding: 10px;
-    margin-right: 10px;
-    border-radius: 10px;
-    border-color: #bdbdbd;
-    border-width: .5px;
-    cursor: pointer;
-    transition: .5s;
-    font-weight: 600;
+  padding: 10px;
+  margin-right: 10px;
+  border-radius: 10px;
+  border-color: #bdbdbd;
+  border-width: 0.5px;
+  cursor: pointer;
+  transition: 0.5s;
+  font-weight: 600;
 }
 
 .button:hover {
-    background-color: #A9A9A9;
-    color: #fff;
-
+  background-color: #a9a9a9;
+  color: #fff;
 }
