--- a/src/components/action-buttons/action-buttons.css
+++ b/src/components/action-buttons/action-buttons.css
@@ -1,6 +1,12 @@
+.buttons-container {
+  margin-right: 10px;
+  display: flex;
+  margin-right: 10px;
+  margin-left: 10px;
+}
 .button {
   padding: 10px;
-  margin-right: 10px;
+  margin-right: 6px;
   border-radius: 10px;
   border-color: #bdbdbd;
   border-width: 0.5px;
